# rust_os

./: Cargo.toml  aarch64-rust_os.json
.cargo/: config  config.toml
src/: lib.rs  main.rs  vga_buffer.rs
