[package]
name = "rust_os"
version = "0.1.0"
authors = ["DotTorrent <DogTorrent@outlook.com>", "CentanYane <2859436460@qq.com>", "hilljiang2001 <hilljiang2001@outlook.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rlibc = "1.0.0"
bootloader = "0.9.11"
volatile = "0.2.6"
spin = "0.4.9"
x86_64 = "0.12.1"
uart_16550 = "0.2.0"

# Abort on panic to disabled stack unwinding (Disabled because of https://github.com/rust-lang/cargo/issues/7359)
# [profile.dev]
# panic = "abort"

# [profile.release]
# panic = "abort"

[dependencies.lazy_static]
version = "1.0"
features = ["spin_no_std"]

[package.metadata.bootimage]
# `iobase` and `iosize` specify the I/O port through which the device can be reached from the kernel.
test-args = ["-device", "isa-debug-exit,iobase=0xf4,iosize=0x04", "-serial", "stdio", "-display", "none"]
test-success-exit-code = 33         # (0x10 << 1) | 1
test-timeout = 300          # (in seconds)
