[package]
name = "rust_os"
version = "0.1.0"
authors = ["DotTorrent <DogTorrent@outlook.com>", "CentanYane <2859436460@qq.com>", "hilljiang2001 <hilljiang2001@outlook.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rlibc = "1.0.0"
volatile = "0.2.6"
spin = "0.4.9"

[target.'cfg(target_arch = "aarch64")'.dependencies]
#aarch64 = "0.0.4"
#bcm2837 = "0.1.0"
aarch64 = { git = "https://github.com/rcore-os/aarch64", version = "3.0.1" }
bcm2837 = { git = "https://github.com/rcore-os/bcm2837", version = "2.5.1", optional = true }

[dependencies.lazy_static]
version = "1.0"
features = ["spin_no_std"]


